Changes: - File uploading changes to folder uploading - Alert and error message pop up is implemented - Slidebar collapsed image stretching is fixed - If any error while pressing render then browser will refresh automatically.

--- a/mpi_vtk_js/polls/static/css/final_3D_viewer_CSS_file.css
+++ b/mpi_vtk_js/polls/static/css/final_3D_viewer_CSS_file.css
@@ -62,6 +62,7 @@
 }
 
 #sidebar {
+    position: fixed;
   min-width: 460px;
   max-width: 460px;
   background: #482424;
@@ -70,6 +71,16 @@
    min-height: 100%; /* chrome needed it a question time , not anymore */
    flex: 0 0 460px;
  /* height: 100vh */
+}
+
+.overlay{
+  display:block;
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  background-color:rgba(0,0,0,0.5)
 }
 
 #sidebar.active {
